<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/fondo"
                android:id="@+id/principal">
    <!--    <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
                    android:clipToPadding="true" android:layout_below="@id/RLBotones" android:background="@drawable/chinchetahome" >
        &lt;!&ndash;<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:background="@drawable/chinchetahome" android:layout_marginBottom="1dp"/>&ndash;&gt;
    </RelativeLayout>-->
    <TextView android:layout_height="wrap_content"
              android:id="@+id/TVTitulo"
              android:layout_width="wrap_content"
              android:text="@string/app_name" android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="27dp" android:textSize="48dp"
              android:textColor="@color/white"/>

    <!-- Contenedor de los boton del menú -->
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_below="@id/TVTitulo"
                    android:layout_centerVertical="false"
                    android:id="@+id/RLContBotones">
        <!--android:layout_margin="30dp"-->


        <Button android:text="@string/ListadoLugares"
                android:layout_height="wrap_content"
                android:id="@+id/BTListaLugares"
                android:layout_width="fill_parent"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/boton"
                />

        <Button android:text="@string/MapaLugares"
                android:layout_height="wrap_content"
                android:id="@+id/BTMapaLugares"
                android:layout_width="fill_parent"
                android:layout_below="@id/RLContBotones"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/boton"
                />


    </RelativeLayout>
    <RelativeLayout android:layout_height="fill_parent" android:layout_width="wrap_content"
                    android:layout_below="@id/RLContBotones" android:gravity="bottom"
            >
        <ImageView android:layout_width="90dp" android:layout_height="150dp"
                   android:background="@drawable/chinchetahome" android:adjustViewBounds="true"
                   android:scaleType="centerCrop"
                />


    </RelativeLayout>

</RelativeLayout>